<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="intro_text">Droid Dessert</string>
    <string name="choose_a_dessert">Choose a Dessert</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches">Ice Cream Sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a Donut</string>
    <string name="ice_cream_order_message">You ordered an Ice Cream Sandwich</string>
    <string name="froyo_order_message">You ordered a FroYo</string>
    <string name="choose_delivery_method">Choose a Delivery method :\t</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">Chosen :\t</string>
    <string name="nothing_clicked">Nothing clicked</string>

    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact</string>

    <string name = "google_mtv_coord_zoom12">geo:-6.8894946,107.6162826,18.78?z=18</string>
</resources>
